--- a/client/src/index.css
+++ b/client/src/index.css
@@ -23,6 +23,11 @@ code {
   padding: 5px 10px;
 }
 
+.game-week-text {
+  font-weight: bold;
+  font-size: 32px;
+}
+
 .league-row {
   padding-top: 5px;
   padding-bottom: 5px;
