--- a/client/src/index.css
+++ b/client/src/index.css
@@ -41,6 +41,7 @@ code {
   margin-bottom: 5px;
   font-size: 16px;
   font-weight: bold;
+  color: black;
 }
 
 .standings-player-name {
@@ -126,10 +127,16 @@ code {
 .match-team-text {
   font-size: 22px;
   margin-bottom: 5px;
+  color: black;
 }
 
 .match-score-text {
   font-size: 26px;
   font-weight: bold;
   margin-bottom: 5px;
+}
+
+a :hover {
+  text-decoration: underline;
+  text-decoration-color: black;
 }
