Change margins on player table

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -120,6 +120,10 @@ code {
   margin-right: 5px;
 }
 
+.small-margin-bottom {
+  margin-bottom: 5px;
+}
+
 .inline-block {
   display: inline-block;
 }
