--- a/client/src/index.css
+++ b/client/src/index.css
@@ -26,6 +26,8 @@ code {
 .game-week-text {
   font-weight: bold;
   font-size: 32px;
+  margin-bottom: 10px;
+  margin-top: 10px;
 }
 
 .transactions-text {
@@ -199,4 +201,8 @@ code {
 a :hover {
   text-decoration: underline;
   text-decoration-color: black;
+}
+
+.container-selector {
+  margin-bottom: 10px;
 }
