--- a/client/src/index.css
+++ b/client/src/index.css
@@ -224,15 +224,15 @@ a :hover {
 }
 
 .form-icon {
-  width: 25px;
-  height: 25px;
+  width: 20px;
+  height: 20px;
   border-radius: 100%;
   border: 1px solid darkgray;
   text-align: center;
   vertical-align: middle;
   color: white;
   font-weight: bold;
-  padding-top: 3px;
+  padding-top: 0px;
   margin-right: 1px;
   margin-left: 1px;
   display: inline-block;
@@ -263,4 +263,9 @@ a :hover {
 
 .bold {
   font-weight: bold;
+}
+
+.ellipsis {
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
