--- a/client/src/index.css
+++ b/client/src/index.css
@@ -252,9 +252,9 @@ a :hover {
 }
 
 .gameweek-dropdown {
-  display: inline-flex;
   margin-left: 10px;
   margin-right: 5px;
+  width: 85px;
 }
 
 .fixture-transfer-selector {
